# Genesis_NGX_1.0

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_REFERENCE.md  BACKUP_AND_RECOVERY_STRATEGY.md  BRANCH_PROTECTION_ANALYSIS.md  CLAUDE.md  COMMIT_COMMANDS 2.md  COMMIT_COMMANDS 4.md  COMPLETE_REPOSITORY_CHECKLIST.md  FRONTEND_PERFORMANCE_OPTIMIZATION_COMPLETE.md  GENESIS_FRONTEND_FEATURES 2.md  GENESIS_MASTER_PLAN 2.md  GENESIS_MASTER_PLAN 3.md  GENESIS_PERFORMANCE_ROADMAP 4.md  GENESIS_PERFORMANCE_ROADMAP.md  GENESIS_ROADMAP.md  GENESIS_SECURITY_CHECKLIST.md  GENESIS_TESTING_STRATEGY 4.md  GENESIS_TESTING_STRATEGY.md  GENESIS_USER_EXPERIENCE 3.md  GENESIS_USER_EXPERIENCE.md  GITHUB_ACTIONS_FIX.md  GITHUB_CONFIGURATION_GUIDE.md  GITHUB_SECRETS_SETUP.md  GITHUB_SETUP_COMPLETED.md  INTEGRATION_GUIDE.md  LICENSE  MASTER_EXECUTION_PLAN.md  NEXT_SESSION_PLAN 2.md  NEXT_STEPS_GITHUB.md  NGX_ECOSYSTEM_INTEGRATION_COMPLETE 2.md  NGX_ECOSYSTEM_INTEGRATION_COMPLETE 4.md  NGX_ECOSYSTEM_TECHNICAL_FLOW 2.md  NGX_ECOSYSTEM_TECHNICAL_FLOW 3.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PRODUCTION_READINESS_REPORT_FINAL.md  PROGRESS_REPORT_2025-07-17.md  PROGRESS_REPORT_2025_07_21 4.md  PROGRESS_REPORT_2025_07_21.md  (+15 more)
backend/: .env.example  .env.test  .gitignore  ANALISIS_PRUEBAS_FALLIDAS_POINT1.md  A_PLUS_STANDARDIZATION_NODE_COMPLETE.md  BETA_TEST_ANALYSIS_REPORT.md  BETA_VALIDATION_PROGRESS_2025-07-29.md  BETA_VALIDATION_PROGRESS_2025-07-31.md  BUDGET_SYSTEM_README.md  CHANGELOG.md  CIRCULAR_IMPORT_FIX_SUMMARY.md  CLAUDE.md  CLEANUP_ANALYSIS_REPORT.md  CLEANUP_PLAN_DETAILED.md  CLEANUP_SUCCESS_REPORT.md  CLEANUP_SUMMARY_2025-07-18.md  CONSOLIDATION_COMPLETE.md  CONTEXT_SESSION_EMBEDDINGS.md  DEPENDENCY_AUDIT_REPORT 2.md  Dockerfile  ELEVENLABS_VOICES_VERIFICATION.md  ENVIRONMENT_SETUP_GUIDE.md  ESTRUCTURA_TABLAS_GENESIS.md  HEALTH_ASSESSMENT_REPORT_2025_07_31.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TRACKER.md  IMPORT_HANG_SOLUTION.md  LICENSE  MCP_INTEGRATION_STATUS 2.md  MIGRATION_INSTRUCTIONS.md  MULTI_AGENT_INTEGRATION_COMPLETE.md  Makefile  NEXT_CONVERSATION_CONTEXT.md  NEXT_STEPS.md  NEXUS_PIVOT_IMPLEMENTATION.md  NGX_ECOSYSTEM_OVERVIEW 2.md  NOTICE  OPENTELEMETRY_FIX.md  OPENTELEMETRY_FIX_REPORT.md  PROGRESS_REPORT_AUGUST_6_2025.md  (+46 more)
backend/adk/: README.md  agent.py
backend/app/: main.py  main_original_backup.py
backend/clients/: elevenlabs_client.py  elevenlabs_conversational_client.py  supabase_client.py
backend/config/: budgets.json  gemini_models.py  secrets.py
backend/core/: __init__.py  adherence_monitoring_service.py  adherence_prediction_engine.py  advanced_cache_manager.py  advanced_rate_limit.py  agent_collaboration_hub.py  agent_visibility.py  async_processor_enhanced.py  audit.py  behavioral_pattern_analyzer.py  budget.py  cache_decorators.py  cache_prediction_engine.py  cache_strategies.py  celery_app.py  circuit_breaker.py  circuit_breaker_enhanced.py  compliance.py  conversation_memory.py  data_anonymization.py  database.py  document_processor.py  domain_specialized_models.py  embeddings_manager.py  exceptions.py  feature_flags.py  feedback_service.py  google_credentials.py  granular_rate_limiter.py  image_cache.py  image_optimizer.py  insight_fusion_engine.py  intent_analyzer_optimized.py  lazy_init.py  logging_config.py  memory_cache_optimizer.py  memory_search.py  metrics 2.py  metrics.py  multi_agent_coordinator.py  (+28 more)
backend/docs/: A2A_INTEGRATION_TESTS_COMPLETE.md  A2A_TESTING_GUIDE.md  ADK_A2A_ARCHITECTURE.md  ADVANCED_CACHE_SYSTEM.md  AGENT_MODULARIZATION_GUIDE.md  BETA_VALIDATION_SUITE.md  BUDGET_SYSTEM_GUIDE.md  CDN_IMPLEMENTATION_GUIDE.md  COMPLIANCE.md  DATABASE_SCHEMA_DOCUMENTATION.md  EMBEDDINGS_IMPLEMENTATION_GUIDE.md  FEATURE_FLAGS_USAGE.md  PHASE_11_2_STANDARDIZATION_PLAN.md  PHASE_11_CONSOLIDATION_PLAN.md  PRIVACY_POLICY.md  RESILIENCY_GUIDE.md  SESSION_CONTEXT_2025_08_01.md  SUPABASE_SETUP_COMPLETE.md  TESTING_GUIDE.md  api_endpoints_v2.md  embeddings_system.md  gemini_upgrade_plan.md  rag_implementation_guide.md  search_system.md
backend/examples/: advanced_cache_usage.py  function_calling_example.py  test_rag_pipeline.py
backend/frontend/: NEXT_LEVEL_PROGRESS.md  jest.setup.js  next.config.mjs  tsconfig.tsbuildinfo
backend/infrastructure/: a2a_optimized.py  a2a_server.py  background_tasks.py  cache_warming.py  monitoring.py
backend/k8s/: SECRETS_MANAGEMENT.md
backend/mcp/: DEPLOYMENT_GUIDE.md  README.md  __init__.py  claude_desktop_config.json  docker-compose.ha.yml  genesis-orchestrator.service  haproxy.cfg  main.py  prometheus.yml  startup_orchestrator.py  test_adapters.py
backend/monitoring/: alertmanager.yml  budget_dashboard.py  performance_dashboard.py  prometheus.yml
backend/rag/: __init__.py  pipeline.py
backend/reports/: beta_validation_results_20250721_091407.json  beta_validation_results_20250729_022803.json  beta_validation_results_20250729_024426.json  beta_validation_results_20250729_025031.json  beta_validation_results_20250729_025332.json  beta_validation_results_20250729_025926.json  beta_validation_results_20250729_031450.json  beta_validation_results_20250729_090020.json  beta_validation_results_20250730_011333.json  beta_validation_results_20250730_011741.json  beta_validation_results_20250730_013711.json  beta_validation_results_20250730_020654.json  (+44 more)
(+1076 files in other folders)
